--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@ code/lib/PersistentSkipList/
 code/test/points.txt
 code/test/segments.txt
 code/test/test_linesegments
+code/test/diff.txt
+code/test/naive.txt
+code/test/psl.txt
